# ReAct-agent-implementation

./: .gitignore  README.md  REPORT.md  agent.py  chat.py  logger.py  main.py  medgemma-4b-dpo.ipynb  metrics.xlsx  model.py  prepare_index.py  pyproject.toml  tools.py
data/: Disease-Scenario-SymptomDescription.csv  Disease-Scenario-SymptomDescription.xlsx  ViMedical_Disease_summary.csv  dpo_train.json  symptoms.csv  tfidf_index.npz  tfidf_vectorizer.pkl  ~$Disease-Scenario-SymptomDescription.xlsx
logs/: gpt-4.1-mini-2025_07_17-2_30.txt  medgemma-4b-dpo-2025_07_20-02_46.txt  medgemma-4b-dpo-2025_07_20-22_52.txt  medgemma-4b-dpo-2025_07_20-23_05.txt  medgemma-4b-dpo-2025_07_21-02_01.txt  medgemma-4b-dpo-2025_07_21-02_59.txt  medgemma-4b-dpo-2025_07_21-03_50.txt  medgemma-4b-dpo-2025_07_21-11_38.txt  medgemma-4b-dpo-2025_07_21-11_44.txt  medgemma-4b-dpo-2025_07_21-17_23.txt  medgemma-4b-it-2025_07_17-23_30.txt  medgemma-4b-it-2025_07_17-23_40.txt  medgemma-4b-it-2025_07_17-23_55.txt  medgemma-4b-it-2025_07_18-21_05.txt  medgemma-4b-it-2025_07_18-21_25.txt  medgemma-4b-it-2025_07_18-21_49.txt  medgemma-4b-it-2025_07_18-22_04.txt  medgemma-4b-it-2025_07_18-22_41.txt  medgemma-4b-it-2025_07_18-22_46.txt  medgemma-4b-it-2025_07_18-22_56.txt  medgemma-4b-it-2025_07_19-22_09.txt  medgemma-4b-it-2025_07_19-22_11.txt  medgemma-4b-it-2025_07_19-22_18.txt  medgemma-4b-it-2025_07_20-00_10.txt  medgemma-4b-it-2025_07_20-01_28.txt  medgemma-4b-it-2025_07_20-02_30.txt  medgemma-4b-it-2025_07_20-02_34.txt  medgemma-4b-it-2025_07_21-01_36.txt  medgemma-4b-it-2025_07_21-01_42.txt  (+2 more)
